--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=s1938740
 spring.jpa.hibernate.ddl-auto=update
 
+spring.mvc.hiddenmethod.filter.enabled=true
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
